--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markov-maron-ipsum",
   "version": "1.0.0",
-  "description": "Npm package to produce lines of lorem ipsum from Mark Maron quotes fed into a markov chain generator",
+  "description": "Npm package to produce lines of lorem ipsum from a Jim Carry commencement speech he made, which has been fed into a markov chain generator",
   "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +9,6 @@
   "author": "Zachary Droge",
   "license": "MIT",
   "bin": {
-    "ramble": "./cli.js"
+    "jimsay": "./cli.js"
   }
 }
