--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "jimcarry-ipsum",
   "version": "1.1.1",
   "description": "Npm package to produce lines of lorem ipsum from a Jim Carry commencement speech he made, which has been fed into a markov chain generator",
-  "main": "cli.js",
+  "main": "bin/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zachary Droge",
   "license": "MIT",
+  "preferGlobal": true,
   "bin": {
     "jimsay": "./cli.js"
   }
